fix: Add dark mode styles for the bar component

--- a/src/app/tab-bar/tab-bar.component.scss
+++ b/src/app/tab-bar/tab-bar.component.scss
@@ -19,6 +19,12 @@
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  .bar {
+    border: 2px solid #999;
+  }
+}
+
 .indicator {
   position: absolute;
   background-color: white;
